# metasploit-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/metasploit_mcp/: __init__.py  cli.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_config.py
