[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasploit-mcp-server"
version = "1.0.0"
description = "Advanced Model Context Protocol (MCP) server for Metasploit Framework integration - enabling AI agents to perform authorized penetration testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Security Research Team", email = "security@example.com" }
]
keywords = [
    "metasploit",
    "mcp",
    "model-context-protocol",
    "penetration-testing",
    "security",
    "ai-agents",
    "cybersecurity",
    "red-team",
    "exploitation",
    "vulnerability-assessment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed"
]

dependencies = [
    "mcp>=1.0.0",
    "msgpack>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
metasploit-mcp = "metasploit_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/metasploit-mcp-server"
Documentation = "https://github.com/yourusername/metasploit-mcp-server#readme"
Repository = "https://github.com/yourusername/metasploit-mcp-server"
Issues = "https://github.com/yourusername/metasploit-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/metasploit_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/metasploit_mcp --cov-report=term-missing"
